Add html and css

--- a/css/contact.css
+++ b/css/contact.css
@@ -13,6 +13,6 @@ p{
   font-size: 13px;
   font-family: 'open sans condensed', 'HelveticaNeue', 'Helvetica Neue', 'Helvetica-Neue', Helvetica, Arial, sans-serif
 }
-.contact{
+/* .contact{
   color:
-}
+} */
