style css files

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-h1,h2,h3{
+h1,
+h2,
+h3 {
   letter-spacing: 1px;
   font-size: 25px;
   color: #222222;
@@ -6,13 +8,13 @@ h1,h2,h3{
   line-height: 1.1em;
   font-family: 'open sans condensed', 'HelveticaNeue', 'Helvetica Neue', 'Helvetica-Neue', Helvetica, Arial, sans-serif;
 }
-p{
+
+p {
   vertical-align: baseline;
   text-align: justify;
   color: red;
   font-size: 13px;
   font-family: 'open sans condensed', 'HelveticaNeue', 'Helvetica Neue', 'Helvetica-Neue', Helvetica, Arial, sans-serif
 }
-.contact{
-  color:
-}
+
+.contact {}
