--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,22 @@
-h1,h2,h3{
+h1,
+h2,
+h3 {
   letter-spacing: 1px;
   font-size: 25px;
-  color: #222222;
+  color: #51fa27;
   font-weight: 600;
   line-height: 1.1em;
   font-family: 'open sans condensed', 'HelveticaNeue', 'Helvetica Neue', 'Helvetica-Neue', Helvetica, Arial, sans-serif;
 }
-p{
+
+p {
   vertical-align: baseline;
   text-align: justify;
-  color: red;
+  color: rgb(0, 89, 255);
   font-size: 13px;
   font-family: 'open sans condensed', 'HelveticaNeue', 'Helvetica Neue', 'Helvetica-Neue', Helvetica, Arial, sans-serif
 }
-.contact{
-  color:
+
+.contact {
+  color: forestgreen;
 }
