--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,6 @@
 
 body{
   margin: 50px;
-
 }
 
 
@@ -46,16 +45,16 @@ p {
   color: grey;
   font-size: 13px;
   font-family: 'open sans condensed', 'HelveticaNeue', 'Helvetica Neue', 
-  'Helvetica-Neue', Helvetica, Arial, sans-serif
+  'Helvetica-Neue', Helvetica, Arial, sans-serif;
 }
 
 .info{
   width: 300px;
 }
 .images .fa-twitter-square{
-font-size: 50px;
-color: white;
-background-color: #45B0E3;
+font-size: 70px;
+color: #3A589B;
+background-color: white;
 }
 .images .fa-facebook{
 color:#3A589B;
@@ -70,7 +69,7 @@ font-size:65px ;
 }
 .images .fa-linkedin-in{
   font-size: 50px;
- background-color: #007AB9; 
+ background-color:#3A589B; 
  color: white;
  border-radius: 50%;
  padding: 10px;
@@ -93,16 +92,21 @@ span{
 }
 .map1{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .map img{
   width: 650px;
   height: 600px;
+}
+.map .fa-location-dot{
+  width: 100px;
+  height: 200px;
   color: red;
+
 }
 .map,h1,h2{
   text-align: center;
-  color: #AB3D45;
+  
   
 }
 
@@ -134,6 +138,7 @@ form,textarea{
   letter-spacing: 2px;
   color: white;
   background-color:#EC443B ;
+  margin-bottom: 40px;
 }
 .request{
   position: relative;
@@ -141,6 +146,23 @@ form,textarea{
   width: 500px;
 }
 
-/* .contact{
-  color:
-} */
+@media screen and (max-width: 600px){
+  .contact{
+    flex-direction: column;
+    justify-content: center;
+    width: 500px;
+    align-items: center;
+  }
+  .media{
+    flex-direction: column;
+    justify-content: center;
+    width: 300px;
+    height: 700px;
+  align-items: center;
+  }
+  .map1{
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 500px;
+}
