--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 .header {
-  min-height: 70vh;
+  min-height: 90vh;
   width: 100%;
   overflow: hidden;
   background: url(./images/rut-miit-3EMw3T-ZjkE-unsplash.jpg);
@@ -19,20 +19,36 @@
   position: relative;
   animation: change 20s infinite ease;
 }
+.logo{
+  float: left; 
+  margin-top: -15px; 
+  color: blue; 
+  font-size: 35px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  border-radius: 20px;
+}
+
 
 nav {
-  background: #0082e6;
-  height: 80px;
+  background: #f6f8fa;
+  height: 70px;
   width: 100%;
   display: flex;
-  padding: 2% 6%;
+  padding: 2% 5%;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+}
+ 
 }
 
 nav ul li {
-  margin-left: 0;
+  margin-left: 50px;
   margin-right: 50px;
+  float: right;
+  text-decoration: none;
 }
 
 .nav_links ul li {
@@ -40,20 +56,26 @@ nav ul li {
   display: inline-block;
   padding: 0 12px 30px;
   position: relative;
+  margin-left: 50px;
 }
 
 .nav_links ul li a {
-  color: hsl(0, 45%, 98%);
+  color: hsl(0, 0%, 3%);
   text-decoration: none;
   font-size: 17px;
-  padding: 7px 13px;
-  border-radius: 3px;
+  padding: 7px 1px;
+  border-radius: 30px;
 }
 
 a.active,
 a:hover {
-  background: #034e88;
+  background: #8d9397;
   transition: 0.5s;
+}*/
+
+.text{
+  position: absolute;
+  text-align: center;
 }
 
 .text_box {
@@ -64,26 +86,11 @@ a:hover {
   text-transform: uppercase;
 }
 .text_box h1{
-  color: rgb(10, 10, 3);
+  color: orange;
   font-size: 60px;
   letter-spacing: 15px;
 }
-.text_box h1 span{
-  color: orange;
-}
 
-.text_box a {
-  background: #85c1ee;
-  padding: 10px 24px;
-  text-decoration: none;
-  font-size: 19px;
-  border-radius: 20px;
-}
-
-.text_box a:hover {
-  background: #034e88;
-  color: #fff;
-}
 
 @keyframes change {
   0% {
@@ -102,7 +109,7 @@ a:hover {
 
 
 .container{
-  margin-top: 50px;
+  margin-top: 150px;
 }
 
 .POM{
@@ -113,6 +120,22 @@ a:hover {
   margin-top: 100px;
   margin-left: 100px;
   margin-right: 100px;
+}
+.col-sm-6{
+  font-size: 20px;
+  align-items: center;
+}
+.col-sm-6 p{
+  align-items: center;
+}
+
+.col-sm-12{
+  font-size: 30px;
+  justify-content: center;
+}
+span{
+  font-size: 50px;
+  color: #078ef5;
 }
 
 
